# pycosim

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: architecture.md
examples/: operators_only.json  simple_two_fmu.json
examples/bat/: BAT_fmu.json
examples/bat/fmus/: BAT_5.fmu  BAT_Ctrl.fmu
src/pycosim/: __init__.py  __main__.py  cli.py  data_type.py  exceptions.py
src/pycosim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pycosim/config/: loader.py
src/pycosim/distributed/: protocol.py  worker.py
src/pycosim/engine/: co_initializer.py  exporter.py  graph_executor.py  iterator.py  visualizer.py
src/pycosim/engine/steppers/: adams_bashforth.py  base.py  constant.py  euler.py
src/pycosim/model/: arrow.py  fmu_proxy.py  graph.py  graph_node.py  settings.py  variable.py
src/pycosim/model/nodes/: external_input.py  external_output.py  fmu_local.py  fmu_soul.py  fmu_stub.py
src/pycosim/model/nodes/operators/: adder.py  base.py  gain.py  multiplier.py  offset.py
tests/: conftest.py  test_arrow.py  test_co_initializer.py  test_config_loader.py  test_data_type.py  test_exporter.py  test_graph_executor.py  test_graph_node.py  test_iterator.py  test_operators.py  test_protocol.py  test_stepper.py  test_variable.py  test_visualizer.py
